# iocp-server

./: CMakeLists.txt
IocpServer/: CMakeLists.txt  ConnectionInformation.h  ExternalLibraries.h  IocpException.h  IocpHandler.cpp  IocpHandler.h  IocpServer.cpp  IocpServer.h
IocpServer/detail/: Connection.cpp  Connection.h  ConnectionManager.cpp  ConnectionManager.h  SendQueue.cpp  SendQueue.h  SharedIocpData.h  StdAfx.h  Utils.cpp  WorkerThread.cpp  WorkerThread.h
TestServer/: CMakeLists.txt  EchoHandler.h  main.cpp
